# PracticeStuff

./: CMakeLists.txt  ClassGeneration.h  CompileTimeError.h  Conversions.h  CopyAlg.h  CreatorLib.h  Creators.h  NiftyContainer.h  NullAndEmpty.h  PartialTemplateSpecialization.h  README.md  TypeLists.h  TypeSelection.h  TypeToTypeMapping.h  TypeTraits.h  main.cpp
